# postman2pytest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: generator.py  parser.py
data/: sample_collection.json
templates/: test_collection.jinja2
tests/: test_generator.py  test_parser.py
