[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postman2pytest"
version = "1.0.0"
description = "Convert Postman Collection v2.1 JSON files into executable pytest test suites"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["postman", "pytest", "api-testing", "test-generation", "qa"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0,<3",
    "jinja2>=3.1,<4",
    "requests>=2.31,<3",
]

[[project.authors]]
name = "Mikhail Golikov"
email = "golikovichev@gmail.com"

[project.urls]
Homepage = "https://github.com/golikovichev/postman2pytest"
Repository = "https://github.com/golikovichev/postman2pytest"
"Bug Tracker" = "https://github.com/golikovichev/postman2pytest/issues"

[project.scripts]
postman2pytest = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "templates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
